--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,14 @@ body {
   .chapter {
     text-align: center;
     margin: 0;
+    padding: 10px;
   }
+
+hr {
+  height: 1px;
+  background-color: white;
+  border-color: white;
+}
   
   .highlightbox {
     display: inline-block;
@@ -109,3 +116,7 @@ body {
   .best-practice h1 {
     color: green;
   }
+
+.index {
+  color: white;
+}
