--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ li {
   
   .rule-box {
     border: 2px solid white;
-    background-color: #FFB6C1;
+    background-color: lightpink;
     color: white;
     padding: auto;
     margin: 20px 0;
